fix footer links from collapsing when screen is small

--- a/app/assets/stylesheets/shared/footer.scss
+++ b/app/assets/stylesheets/shared/footer.scss
@@ -43,5 +43,7 @@
 
 .footer-links {
   text-align: right;
+  max-width: 300px;
+  margin-left: auto;
 }
 
